fix: build error

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,7 @@
       "electron-vite/node"
     ],
     "baseUrl": ".",
+    "moduleResolution": "bundler",
     "paths": {
       "@/*": [
         "src/main/*"
